--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -14,16 +14,46 @@
   justify-content: center;
   align-items: center;
 
+  &--signed-in {
+    justify-content: space-around;
+  }
+
   &__logo-container {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  &__logo-text {
+  &--signed-in &__logo-container {
+    flex-grow: 1;
+  }
+
+  &--signed-in &__logo-image {
+    margin-left: 64px;
+  }
+
+  &__menu-section {
+    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  &__logout-container {
+    flex-basis: 64px;
+    height: 100%;
+    border-left: solid 1px $header-menu-bd-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__company-name {
+    color: $header-company-color;
     font-family: $main-font;
-    font-size: 20px;
-    font-weight: 700;
-    margin-left: 5px;
+    font-size: 17px;
+    margin-right: 31px;
   }
 }
