fixup! feat(header): add header style when signed in

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:300');
 
 $white: #fff;
+$black: #000;
 $main-font: 'Qanelas';
+$primary-btn-color: #00c46c;
 $main-bg-color: #f7f9fb;
+$signin-input-color: #ebebeb;
 $header-company-color: #a0b3b8;
 $header-menu-bd-color: #bdd4da;
 
