--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -9,6 +9,10 @@ $signin-input-color: #ebebeb;
 $header-company-color: #a0b3b8;
 $header-menu-bd-color: #bdd4da;
 
+$app-content-border: 	1px solid rgba(189, 212, 218, .34);
+$graph-views-color: #00fa89;
+$graph-people-color: #11b0fc;
+
 @font-face {
   font-family: 'Qanelas';
   src: font-url('Qanelas-Regular.otf') format('opentype');
