--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -23,3 +23,11 @@ $panelHeaderBck: #002744;
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+.formtastic {
+  .date_picker {
+    input[type=date] {
+      width: calc(80% - 22px);
+    }
+  }
+}
+
