chore(home.index): move graph to home helper

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -10,7 +10,7 @@ $header-company-color: #a0b3b8;
 $header-menu-bd-color: #bdd4da;
 
 $app-content-border: 	1px solid rgba(189, 212, 218, .34);
-$graph-views-color: #00fa89;
+$graph-views-color: #00d976;
 $graph-people-color: #11b0fc;
 
 @font-face {
