--- a/app/assets/stylesheets/app/graphs.scss
+++ b/app/assets/stylesheets/app/graphs.scss
@@ -2,7 +2,7 @@
 
 .summary-graph {
   background-color: $white;
-  border-radius: 4px;
+  border-radius: $app-content-border-radius;
   border: $app-content-border;
   padding: 24px;
 
