feat(campaigns): add campaign show view

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -9,7 +9,7 @@ $primary-font-color: #343434;
 $secondary-font-color: #a0b3b8;
 $content-bg-color: #fff;
 $signin-input-color: #ebebeb;
-$header-company-color: #a0b3b8;
+$header-name-color: #a0b3b8;
 $header-menu-bd-color: #bdd4da;
 
 $app-content-border: 	1px solid rgba(189, 212, 218, .34);
