--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -59,6 +59,7 @@
   }
 
   &__value {
+    display: inline-block;
     font-family: $main-font;
     color: $stats-value-color;
     letter-spacing: $app-spacing-letter;
