--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,7 +1,7 @@
 <div class="app">
   <%= render 'shared/header' %>
   <div class="app__container" %>
-    <h2 class="app__details-title"%><%= t('messages.campaign_dashboard.details_title') %></h2>
+    <h2 class="app__title"%><%= t('messages.campaign_dashboard.details_title') %></h2>
     <div class="summary-graph app__graph">
       <div class="summary-graph__summary-container">
         <div class="summary-graph__total-views">
