--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -3,6 +3,8 @@
 @import './devise';
 @import './graphs';
 @import './home';
+@import './group-date-selector';
+
 
 .app {
   background-color: $main-bg-color;
