feat(campaign_graphs): add stats summary to campaign view

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -15,8 +15,8 @@ $header-menu-bd-color: #bdd4da;
 $app-content-border: 	1px solid rgba(189, 212, 218, .34);
 $app-content-hover-border: 1px solid #00d976;
 $app-content-border-radius: 4px;
-$graph-views-color: #00d976;
-$graph-people-color: #11b0fc;
+$graph-primary-color: #00d976;
+$graph-secondary-color: #11b0fc;
 $stats-value-color: #00d976;
 
 $app-spacing-letter: .8px;
