--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -76,3 +76,97 @@
     line-height: 14px;
   }
 }
+
+.campaign-details {
+  flex-basis: 100%;
+
+  &__title {
+    font-family: $main-font;
+    font-weight: bold;
+    color: $primary-font-color;
+  }
+
+  &__summary {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 8px;
+  }
+
+  &__summary-stat {
+    flex-basis: calc((100% - 30px)/4);
+    margin-right: 10px;
+  }
+
+  &__summary-stat:last-child {
+    margin-right: 0;
+  }
+}
+
+.campaign-detail-data {
+  background-color: $content-bg-color;
+  border: $app-content-border;
+  border-radius: $app-content-border-radius;
+  display: flex;
+  flex-direction: row;
+  font-family: $main-font;
+  padding: 20px 15px;
+
+  &__icon {
+    align-items: center;
+    display: flex;
+    flex-basis: 52px;
+    justify-content: center;
+  }
+
+  &__data-container {
+    align-items: center;
+    display: flex;
+    flex-basis: calc(100% - 52px);
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__data {
+    color: $graph-primary-color;
+    font-size: 28px;
+    font-family: $main-font;
+    font-weight: bold;
+    letter-spacing: .75px;
+    line-height: 34px;
+    margin-bottom: 4px;
+
+  }
+
+  &__data--secondary {
+    color: $graph-secondary-color;
+  }
+
+  &__label {
+    color: $primary-font-color;
+    font-family: $main-font;
+    font-size: 12px;
+    letter-spacing: .4px;
+    line-height: 14px;
+  }
+
+  &--percentage {
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &--percentage &__data {
+    color: $primary-font-color;
+    font-family: $main-font;
+    font-size: 48px;
+    font-weight: normal;
+    line-height: 48px;
+    margin-right: 3px;
+  }
+
+  &--percentage &__label {
+    height: 100%;
+    font-size: 13px;
+    line-height: 15px;
+  }
+}
