--- a/app/assets/stylesheets/app/graphs.scss
+++ b/app/assets/stylesheets/app/graphs.scss
@@ -17,44 +17,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-  }
-
-  &__total-views {
-    flex-grow: 1;
-    font-family: $main-font;
-  }
-
-  &__total-views-count {
-    font-family: $main-font;
-    font-weight: bold;
-    color: $graph-views-color;
-  }
-
-  &__total-people {
-    font-family: $main-font;
-    flex-grow: 1;
-    text-align: center;
-  }
-
-  &__total-people-count {
-    font-family: $main-font;
-    font-weight: bold;
-    color: $graph-people-color;
-  }
-
-  &__effectiveness {
-    font-family: $main-font;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-end;
-  }
-
-  &__effectiveness-count {
-    font-family: $main-font;
-    font-size: 48px;
-    line-height: 48px;
-    margin-right: 3px;
+    margin-bottom: 40px;
   }
 }
