--- a/app/views/campaigns/_campaign_summary.html.erb
+++ b/app/views/campaigns/_campaign_summary.html.erb
@@ -5,14 +5,14 @@
   </h5>
   <div class="campaign-option__stats-container">
     <div class="campaign-stat campaign-option__stat">
-      <%= image_tag 'campaigns-seen.svg', class: 'campaign-stat__icon' %>
+      <%= image_tag 'contacts.svg', class: 'campaign-stat__icon' %>
       <div class="campaign-stat__content">
         <span class="campaign-stat__value"><%= stats[:total_views] %></span>
-        <span class="campaign-stat__label"><%= t('messages.campaigns.total_views') %></span>
+        <span class="campaign-stat__label"><%= t('messages.campaigns.contacts') %></span>
       </div>
     </div>
     <div class="campaign-stat campaign-option__stat">
-      <%= image_tag 'campaigns-contact-points.svg', class: 'campaign-stat__icon' %>
+      <%= image_tag 'seen.svg', class: 'campaign-stat__icon' %>
       <div class="campaign-stat__content">
         <span class="campaign-stat__value"><%= stats[:total_people] %></span>
         <span class="campaign-stat__label"><%= t('messages.campaigns.total_people') %></span>
