--- a/app/views/campaigns/_details_summary_stats.html.erb
+++ b/app/views/campaigns/_details_summary_stats.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag 'contacts.svg' %>
     </div>
     <div class="campaign-detail-data__data-container">
-      <span class="campaign-detail-data__data"><%= @campaign_stats[:contacts] %></span>
+      <span class="campaign-detail-data__data"><%= @campaign_stat.contacts_sum %></span>
       <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.contacts') %></span>
     </div>
   </div>
@@ -14,7 +14,7 @@
       <%= image_tag 'seen.svg' %>
     </div>
     <div class="campaign-detail-data__data-container">
-      <span class="campaign-detail-data__data campaign-detail-data__data--secondary"><%= @campaign_stats[:total] %></span>
+      <span class="campaign-detail-data__data campaign-detail-data__data--secondary"><%= @campaign_stat.total_sum %></span>
       <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.total_people') %></span>
     </div>
   </div>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="campaign-detail-data campaign-detail-data--percentage campaign-details__summary-stat">
-    <span class="campaign-detail-data__data"><%= @campaign_stats[:effectiveness] %></span>
+    <span class="campaign-detail-data__data"><%= @campaign_stat.effectiveness%></span>
     <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.effectiveness') %></span>
   </div>
 </div>
