--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -84,6 +84,17 @@
     font-family: $main-font;
     font-weight: bold;
     color: $primary-font-color;
+    margin: 32px 0 6px;
+    line-height: 26px;
+  }
+
+  &__filters-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__filter {
+    flex-basis: 25%;
   }
 
   &__summary {
@@ -134,7 +145,6 @@
     letter-spacing: .75px;
     line-height: 34px;
     margin-bottom: 4px;
-
   }
 
   &__data--secondary {
