--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require 'vue-multiselect/dist/vue-multiselect.min'
+ *= require 'flatpickr/dist/flatpickr'
+ *= require 'flatpickr/dist/themes/material_green'
  *= require app/app
  *= require_self
  */
