--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -17,6 +17,7 @@ $app-content-hover-border: 1px solid #00d976;
 $app-content-border-radius: 4px;
 $graph-primary-color: #00d976;
 $graph-secondary-color: #11b0fc;
+$graph-third-color: #fe7b4f;
 $stats-value-color: #00d976;
 
 $app-spacing-letter: .8px;
