--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -156,6 +156,10 @@
     color: $graph-secondary-color;
   }
 
+  &__data--third {
+    color: $graph-third-color;
+  }
+
   &__label {
     color: $primary-font-color;
     font-family: $main-font;
