--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -10,7 +10,7 @@
         <group-date-selector initial-group="<%= @date_group_by.to_s %>"></group-date-selector>
       </div>
       <div class="summary-graph__graph">
-        <line-chart :data="<%= campaign_graph_data(@campaign_stat).to_json %>" :legend="false" :colors="['#11B0FC', '#00D976']" :library="{ chart: { zoomType: 'x' } }"></line-chart>
+        <line-chart :data="<%= campaign_graph_data(@campaign_stat).to_json %>" :legend="false" :colors="['#11b0fc', '#00d976', '#fe7b4f']" :library="{ chart: { zoomType: 'x' } }"></line-chart>
       </div>
     </div>
   </div>
