feat(): redesign group date selector component

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -19,6 +19,7 @@ $graph-primary-color: #00d976;
 $graph-secondary-color: #11b0fc;
 $graph-third-color: #fe7b4f;
 $stats-value-color: #00d976;
+$primary-hover-bg: #ececec;
 
 $app-spacing-letter: .8px;
 
