--- a/app/assets/stylesheets/app/graphs.scss
+++ b/app/assets/stylesheets/app/graphs.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 8px;
     margin-bottom: 40px;
   }
 }
