feat(): redesign campaign filters

--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -3,8 +3,7 @@
 @import './devise';
 @import './graphs';
 @import './home';
-@import './group-date-selector';
-@import './tools';
+@import 'components/components';
 
 
 .app {
