--- a/app/views/campaigns/_details_summary_stats.html.erb
+++ b/app/views/campaigns/_details_summary_stats.html.erb
@@ -1,36 +1,13 @@
 <div class="campaign-details__summary">
-  <div class="campaign-detail-data campaign-details__summary-stat">
-    <div class="campaign-detail-data__icon">
-      <%= image_tag 'contacts.svg' %>
+  <% summary_stats_elements(@campaign_stat).each do |element| %>
+    <div class="campaign-detail-data campaign-details__summary-stat">
+      <div class="campaign-detail-data__icon">
+        <%= image_tag element[:icon] %>
+      </div>
+      <div class="campaign-detail-data__data-container">
+        <span class="campaign-detail-data__data <%= "campaign-detail-data__data--#{element[:class]}" if element[:class] %>"><%= element[:value] %></span>
+        <span class="campaign-detail-data__label"><%= t("messages.campaign_dashboard.#{element[:translation]}") %></span>
+      </div>
     </div>
-    <div class="campaign-detail-data__data-container">
-      <span class="campaign-detail-data__data"><%= @campaign_stat.contacts_sum %></span>
-      <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.contacts') %></span>
-    </div>
-  </div>
-
-  <div class="campaign-detail-data campaign-details__summary-stat">
-    <div class="campaign-detail-data__icon">
-      <%= image_tag 'seen.svg' %>
-    </div>
-    <div class="campaign-detail-data__data-container">
-      <span class="campaign-detail-data__data campaign-detail-data__data--secondary"><%= @campaign_stat.total_sum %></span>
-      <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.total_people') %></span>
-    </div>
-  </div>
-
-  <div class="campaign-detail-data campaign-details__summary-stat">
-    <div class="campaign-detail-data__icon">
-      <%= image_tag 'rotation.svg' %>
-    </div>
-    <div class="campaign-detail-data__data-container">
-      <span class="campaign-detail-data__data campaign-detail-data__data--third"><%= @campaign_stat.units_rotated_sum %></span>
-      <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.units_rotated') %></span>
-    </div>
-  </div>
-
-  <div class="campaign-detail-data campaign-detail-data--percentage campaign-details__summary-stat">
-    <span class="campaign-detail-data__data"><%= @campaign_stat.effectiveness%></span>
-    <span class="campaign-detail-data__label"><%= t('messages.campaign_dashboard.effectiveness') %></span>
-  </div>
+  <% end %>
 </div>
