--- a/app/assets/stylesheets/app/components/stat.scss
+++ b/app/assets/stylesheets/app/components/stat.scss
@@ -8,9 +8,9 @@
   position: relative;
 
   &__icon-data-container {
-    padding: 20px 10px;
     display: flex;
     flex-direction: row;
+    padding: 20px 10px;
   }
 
   &__icon {
@@ -30,10 +30,10 @@
 
   &__data {
     color: $graph-primary-color;
-    font-size: 28px;
     font-family: $main-font;
+    font-size: 28px;
     font-weight: bold;
-    letter-spacing: .75px;
+    letter-spacing: 0.75px;
     line-height: 34px;
     margin-bottom: 4px;
   }
@@ -50,17 +50,17 @@
     color: $primary-font-color;
     font-family: $main-font;
     font-size: 12px;
-    letter-spacing: .4px;
+    letter-spacing: 0.4px;
     line-height: 14px;
   }
 
   &__gender-breakdown {
     border: $app-content-border;
-    position: absolute;
-    text-align: center;
-    padding: 5px;
-    right: 0;
     left: 0;
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    text-align: center;
   }
 
   &--clickable {
