fix(campaign-details): change path of images to be set in erb

--- a/app/views/campaigns/_details_summary_stats.html.erb
+++ b/app/views/campaigns/_details_summary_stats.html.erb
@@ -1,5 +1,5 @@
 <div class="campaign-details__summary">
   <% summary_stats_elements(@campaign_stat).each do |element| %>
-    <stat element="<%= element.to_json %>"></stat>
+    <stat element="<%= element.to_json %>" image="<%= image_path(element[:icon]) %>"></stat>
   <% end %>
 </div>
