--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,11 +5,20 @@
   <% if user_signed_in? %>
     <% if defined?(@campaign) %>
       <div class="header__campaign-container">
-        <p class="header__campaign-name"><%= @campaign.name %></p>
+        <p class="header__campaign-name">
+          <%= @campaign.name %>
+        </p>
+        <%= image_tag @campaign.logo.variant(resize: '60x60') if @campaign.logo.attached? %>
       </div>
     <% end %>
     <div class="header__menu-section">
-      <p class="header__company-name"><%= current_user&.company.name %> </p>
+      <p class="header__company-name">
+        <% if current_user&.company.logo.attached? %>
+          <%= image_tag current_user&.company.logo.variant(resize: '60x60') %>
+        <% else %>
+          <%= current_user&.company.name %>
+        <% end %>
+      </p>
       <div class="header__logout-container">
         <%= link_to destroy_user_session_path, class: 'header__logout', title: t('messages.header.logout'), method: :delete do %>
           <%= image_tag 'logout.svg', class: 'header__logout-icon' %>
