fix(logos): use image tag height to resize images

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -31,3 +31,15 @@ $panelHeaderBck: #002744;
   }
 }
 
+.campaign {
+  &__logo {
+    height: 100px;
+  }
+}
+
+.company {
+  &__logo {
+    height: 100px;
+  }
+}
+
