refactor(units-rotated): change name to units extracted

--- a/app/assets/stylesheets/app/components/stat.scss
+++ b/app/assets/stylesheets/app/components/stat.scss
@@ -42,7 +42,7 @@
     color: $graph-secondary-color;
   }
 
-  &__data--units-rotated {
+  &__data--units-extracted {
     color: $graph-third-color;
   }
 
