--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -55,7 +55,9 @@
   flex-direction: row;
 
   &__icon {
-    margin: 10px 17px 10px 0;
+    margin: 10px 0;
+    margin-right: 8px;
+    min-height: 40px;
   }
 
   &__content {
