--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -9,6 +9,9 @@
     <select-filter :options="<%= @channels.to_json %>" label="name" initial-selected="<%= @channel %>" track-by="id" query-param="channel" :placeholder="$t('messages.campaignDetails.filters.channels')"></select-filter>
   </div>
   <div class="campaign-details__filter">
+    <select-filter :options="<%= @communes.to_json %>" label="name" :initial-selected="<%= @commune&.id || 'null' %>" track-by="id" query-param="commune" :placeholder="$t('messages.campaignDetails.filters.communes')"></select-filter>
+  </div>
+  <div class="campaign-details__filter">
     <datetime-picker initial-value="<%= @after_date %>" query-param="after" :placeholder="$t('messages.campaignDetails.filters.afterDate')"></datetime-picker>
   </div>
   <div class="campaign-details__filter">
