--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -1,18 +1,18 @@
 <div class="campaign-details__filters-container">
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @locations.to_json %>" label="name" :initial-selected="<%= @location&.id || 'null' %>" track-by="id" query-param="location" :placeholder="$t('messages.campaignDetails.filters.locations')"></select-filter>
+    <select-filter :options="<%= @locations.to_json %>" label="name" initial-selected="<%= @location&.id %>" track-by="id" query-param="location" :placeholder="$t('messages.campaignDetails.filters.locations')"></select-filter>
   </div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @brands.to_json %>" label="name" :initial-selected="<%= @brand&.id || 'null' %>" track-by="id" query-param="brand" :placeholder="$t('messages.campaignDetails.filters.brands')"></select-filter>
+    <select-filter :options="<%= @brands.to_json %>" label="name" initial-selected="<%= @brand&.id %>" track-by="id" query-param="brand" :placeholder="$t('messages.campaignDetails.filters.brands')"></select-filter>
   </div>
   <div class="campaign-details__filter">
     <select-filter :options="<%= @channels.to_json %>" label="name" initial-selected="<%= @channel %>" track-by="id" query-param="channel" :placeholder="$t('messages.campaignDetails.filters.channels')"></select-filter>
   </div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @communes.to_json %>" label="name" :initial-selected="<%= @commune&.id || 'null' %>" track-by="id" query-param="commune" :placeholder="$t('messages.campaignDetails.filters.communes')"></select-filter>
+    <select-filter :options="<%= @communes.to_json %>" label="name" initial-selected="<%= @commune&.id %>" track-by="id" query-param="commune" :placeholder="$t('messages.campaignDetails.filters.communes')"></select-filter>
   </div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @regions.to_json %>" label="name" :initial-selected="<%= @region&.id || 'null' %>" track-by="id" query-param="region" :placeholder="$t('messages.campaignDetails.filters.regions')"></select-filter>
+    <select-filter :options="<%= @regions.to_json %>" label="name" initial-selected="<%= @region&.id %>" track-by="id" query-param="region" :placeholder="$t('messages.campaignDetails.filters.regions')"></select-filter>
   </div>
   <div class="campaign-details__filter">
     <datetime-picker initial-value="<%= @after_date %>" query-param="after" :placeholder="$t('messages.campaignDetails.filters.afterDate')"></datetime-picker>
