style(campaign): move filters to a sidebar

--- a/app/assets/stylesheets/app/_base.scss
+++ b/app/assets/stylesheets/app/_base.scss
@@ -25,6 +25,7 @@ $app-spacing-letter: .8px;
 
 $app-filter-color: #a0b3b8;
 $app-filter-border: 1px solid rgba(189, 212, 218, .65);
+$app-sidebar-shadow-color: rgba(160, 179, 184, .12);
 $active-filter-color: #00c46c;
 
 @font-face {
