--- a/app/assets/stylesheets/app/campaigns.scss
+++ b/app/assets/stylesheets/app/campaigns.scss
@@ -88,25 +88,40 @@
   flex-basis: 100%;
 
   &__title {
+    color: $primary-font-color;
     font-family: $main-font;
     font-weight: bold;
-    color: $primary-font-color;
-    margin: 32px 0 6px;
     line-height: 26px;
+    margin: 25px 0 6px;
+  }
+
+  &__sidebar {
+    background-color: $white;
+    border: $app-content-border;
+    box-shadow: 0 0 18px 0 $app-sidebar-shadow-color;
+    margin-top: 5px;
+    opacity: .88;
+    padding: 0 25px;
+    width: 176px;
+  }
+
+  &__main {
+    padding: 25px 55px;
+    width: calc(100% - 338px);
   }
 
   &__filters-container {
-    display: flex;
-    flex-direction: row;
+    margin-top: 20px;
   }
 
   &__filter {
-    flex-basis: calc((100% - 30px)/4);
-    margin-right: 10px;
+    margin: 10px 0;
   }
 
-  &__filter:last-child {
-    margin-right: 0;
+  &__filter-separator {
+    border: $app-filter-border;
+    margin: 15px 0;
+    opacity: .3;
   }
 
   &__summary {
