feat(campaign-graph): change date label in tooltip

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -13,7 +13,7 @@
           <group-date-selector initial-group="<%= @date_group_by.to_s %>"></group-date-selector>
         </div>
         <div class="summary-graph__graph">
-          <chart v-bind:series="<%= campaign_graph_data(@campaign_stat).to_json %>" date_format="<%= date_format(@date_group_by.to_s) %>" ></chart>
+          <chart v-bind:series="<%= campaign_graph_data(@campaign_stat).to_json %>" group-by="<%= @date_group_by.to_s %>" ></chart>
         </div>
       </div>
     </div>
