--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,9 +1,11 @@
 <div id="app" class="app">
   <%= render 'shared/header' %>
   <div class="app__container">
-    <h2 class="app__title"><%= t('messages.campaigns.index.title') %></h2>
-    <% current_user.company.campaigns.each do |campaign| %>
-      <%= render 'campaign_summary', campaign: campaign, stats: @stats[campaign.id] %>
-    <% end %>
+    <div class="campaigns">
+      <h2 class="campaigns__title"><%= t('messages.campaigns.index.title') %></h2>
+      <% current_user.company.campaigns.each do |campaign| %>
+        <%= render 'campaign_summary', campaign: campaign, stats: @stats[campaign.id] %>
+      <% end %>
+    </div>
   </div>
 </div>
