--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -1,6 +1,6 @@
 <div class="campaign-details__filters-container">
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @locations.to_json %>" label="name" initial-selected="<%= @location&.id %>" track-by="id" query-param="location" :placeholder="$t('messages.campaignDetails.filters.locations')"></select-filter>
+    <select-filter :options="<%= @locations.to_json %>" label="name" :initial-selected="<%= @selected_locations&.map(&:id) %>" track-by="id" query-param="locations[]" :placeholder="$t('messages.campaignDetails.filters.locations')"></select-filter>
   </div>
   <div class="campaign-details__filter">
     <select-filter :options="<%= @brands.to_json %>" label="name" initial-selected="<%= @brand&.id %>" track-by="id" query-param="brand" :placeholder="$t('messages.campaignDetails.filters.brands')"></select-filter>
