--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -3,7 +3,7 @@
     <select-filter :options="<%= @locations.to_json %>" label="name" :initial-selected="<%= @selected_locations&.map(&:id) %>" track-by="id" query-param="locations[]" :placeholder="$t('messages.campaignDetails.filters.locations')"></select-filter>
   </div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @brands.to_json %>" label="name" initial-selected="<%= @brand&.id %>" track-by="id" query-param="brand" :placeholder="$t('messages.campaignDetails.filters.brands')"></select-filter>
+    <select-filter :options="<%= @brands.to_json %>" label="name" :initial-selected="<%= @selected_brands&.map(&:id) %>" track-by="id" query-param="brands[]" :placeholder="$t('messages.campaignDetails.filters.brands')"></select-filter>
   </div>
   <div class="campaign-details__filter">
     <select-filter :options="<%= @channels.to_json %>" label="name" initial-selected="<%= @channel %>" track-by="id" query-param="channel" :placeholder="$t('messages.campaignDetails.filters.channels')"></select-filter>
