feat(filters): allow multiselect in channel filter

--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -6,7 +6,7 @@
     <select-filter :options="<%= @brands.to_json %>" label="name" :initial-selected="<%= @selected_brands&.map(&:id) %>" track-by="id" query-param="brands[]" :placeholder="$t('messages.campaignDetails.filters.brands')"></select-filter>
   </div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @channels.to_json %>" label="name" initial-selected="<%= @channel %>" track-by="id" query-param="channel" :placeholder="$t('messages.campaignDetails.filters.channels')"></select-filter>
+    <select-filter :options="<%= @channels.to_json %>" label="name" :initial-selected="<%= @selected_channels.to_a %>" track-by="id" query-param="channels[]" :placeholder="$t('messages.campaignDetails.filters.channels')"></select-filter>
   </div>
   <div class="campaign-details__filter-separator"></div>
   <div class="campaign-details__filter">
