--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -10,10 +10,10 @@
   </div>
   <div class="campaign-details__filter-separator"></div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @communes.to_json %>" label="name" :initial-selected="<%=  @selected_communes&.map(&:id) %>" track-by="id" query-param="communes[]" :placeholder="$t('messages.campaignDetails.filters.communes')"></select-filter>
+    <select-filter :options="<%= @communes.to_json %>" label="name" :initial-selected="<%= @selected_communes&.map(&:id) %>" track-by="id" query-param="communes[]" :placeholder="$t('messages.campaignDetails.filters.communes')"></select-filter>
   </div>
   <div class="campaign-details__filter">
-    <select-filter :options="<%= @regions.to_json %>" label="name" initial-selected="<%= @region&.id %>" track-by="id" query-param="region" :placeholder="$t('messages.campaignDetails.filters.regions')"></select-filter>
+    <select-filter :options="<%= @regions.to_json %>" label="name" :initial-selected="<%= @selected_regions&.map(&:id) %>" track-by="id" query-param="regions[]" :placeholder="$t('messages.campaignDetails.filters.regions')"></select-filter>
   </div>
   <div class="campaign-details__filter-separator"></div>
   <div class="campaign-details__filter">
