--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -73,8 +73,12 @@
     flex-grow: 1;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+
+    @media only screen and (min-width: #{$mobile-breakpoint}) {
+      justify-content: flex-end;
+    }
   }
 
   &__logout-container {
@@ -95,7 +99,9 @@
   }
 
   &__company-logo {
-    height: 60px;
+    border-radius: 50%;
+    height: 50px;
+    margin-left: -50%;
   }
 
   &__campaign-container {
