--- a/app/assets/stylesheets/app/app.scss
+++ b/app/assets/stylesheets/app/app.scss
@@ -12,7 +12,10 @@
   flex-direction: column;
   min-height: 100vh;
   text-align: center;
-  min-width: fit-content;
+
+  @media only screen and (min-width: #{$mobile-breakpoint}) {
+    min-width: fit-content;
+  }
 
   &__container {
     display: flex;
