feat(filters): basic apply filters functionality

--- a/app/views/campaigns/_details_campaign_filters.html.erb
+++ b/app/views/campaigns/_details_campaign_filters.html.erb
@@ -27,3 +27,4 @@
     <select-filter :options="<%= gender_types_json %>" label="name" initial-selected="<%= gender %>" track-by="id" query-param="gender" :placeholder="$t('messages.campaignDetails.filters.gender')"></select-filter>
   </div>
 </div>
+<filter-button></filter-button>
