fix(filters): stick filter button to bottm in mobile

--- a/app/assets/stylesheets/app/components/filter-button.scss
+++ b/app/assets/stylesheets/app/components/filter-button.scss
@@ -8,6 +8,7 @@
     bottom: 0;
     display: flex;
     justify-content: space-between;
+    min-height: 18px;
     padding: 19px;
     position: sticky;
   }
